--- a/document.tex
+++ b/document.tex
@@ -77,14 +77,17 @@
 \addcontentsline{toc}{section}{\bibname}
 \printbibliography[heading=none]
 
+%  APPENDIX
+\clearpage
+\begin{appendices}
+    \input{./text/appendix}
+\end{appendices}
+\clearpage
+
 % EIDENSTAT
 \input{./tex/eidesstatt}
 
-% \clearpage
-% \begin{appendices}
-% \input{./text/appendix}
-% \end{appendices}
-
+% KOLOPHON
 \input{./tex/colophon}
 
 \end{document}
