added sqrt symbol modification

--- a/text/content.tex
+++ b/text/content.tex
@@ -1,5 +1,7 @@
 \section{Inhalt}
 
+% REPLACE FILES IN THIS DIRECTORY WITH YOUR OWN CONTENT
+
 \subsection{Akronyme}
 
 Das ist ein \gls{acr}.
@@ -68,7 +70,7 @@ Es folgt nun eine Tabelle in \autoref{tab:exampleTable}.
 
 \subsection{Mathe}
 
-Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt
+Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt.
 
 \begin{equation}
 \begin{gathered}
@@ -76,6 +78,13 @@ Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt
 \text{für } \Re(s) > 1 \text{ und dessen analytischer Kontinuation}
 \end{gathered}
 \label{eq:exampleEquation}
+\end{equation}
+
+Eine Demonstration des modifizierten Wurzel Symbols ist in \autoref{eq:sqrt} gezeigt.
+
+\begin{equation}
+    c^{2} = \sqrt{a^{2} + b^{2}}
+    \label{eq:sqrt}
 \end{equation}
 
 \subsection{Quellcode}
