--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -50,8 +50,7 @@
 \usepackage[inline]{enumitem}
 \usepackage{url}
 \usepackage{pdfpages}
-%\usepackage{sectsty}
-
+\usepackage{letltxmacro}
 \usepackage{ifplatform}
 \renewcommand{\macosxname}{{\Helvetica MacOs}}
 
@@ -75,7 +74,6 @@
 \captionsetup[subtable]{labelformat=simple, labelsep=colon}
 
 % TOC
-\usepackage{tocloft}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 \addto\captionsngerman{\renewcommand*\contentsname{Inhaltsverzeichnis}}
 \addto\captionsngerman{\renewcommand*\listfigurename{Abbildungsverzeichnis}}
@@ -94,6 +92,19 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{siunitx}
+
+% square root hack
+% adds a trailing vertical edge to square roots
+\makeatletter
+  \let\oldr@@t\r@@t
+  \def\r@@t#1#2{%
+  \setbox0=\hbox{$\oldr@@t#1{#2\,}$}\dimen0=\ht0
+  \advance\dimen0-0.2\ht0
+  \setbox2=\hbox{\vrule height\ht0 depth -\dimen0}%
+  {\box0\lower0.4pt\box2}}
+  \LetLtxMacro{\oldsqrt}{\sqrt}
+  \renewcommand*{\sqrt}[2][\ ]{\oldsqrt[#1]{#2} }
+\makeatother
 
 % FLOAT COUNTER
 \floatstyle{ruled}
