--- a/text/content.tex
+++ b/text/content.tex
@@ -68,6 +68,25 @@ Es folgt nun eine Tabelle in \autoref{tab:exampleTable}.
     \label{tab:exampleTable}
 \end{table}
 
+\subsection{Tikz}
+
+In \autoref{fig:tikz} wird eine CircuitTi\textit{k}Z Zeichnung dargestellt.
+
+\begin{figure}[h]
+    \centering
+
+    \begin{circuitikz}[]
+    \draw (0,0) to[short, o-] (2,0) to[R,l_=$R_1$] (2,-2) to[short,*-o] (3,-2);
+    \draw (2,-2) to[R,l_=$R_2$, -*] (2,-4);
+    \draw (0,-4) to[short, o-o] (3,-4);
+    \draw (0,0) to[open, l=$U_{\text{in}}$] (0,-4);
+    \draw (3,-2) to[open, l=$U_{\text{out}}$] (3,-4);
+    \end{circuitikz}
+
+    \caption{Beispielschaltung}
+    \label{fig:tikz}
+\end{figure}
+
 \subsection{Mathe}
 
 Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt.
@@ -83,7 +102,7 @@ Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt.
 Eine Demonstration des modifizierten Wurzel Symbols ist in \autoref{eq:sqrt} gezeigt.
 
 \begin{equation}
-    c^{2} = \sqrt{a^{2} + b^{2}}
+    c = \sqrt{a^{2} + b^{2}}
     \label{eq:sqrt}
 \end{equation}
 
