--- a/text/topic/topic.tex
+++ b/text/topic/topic.tex
@@ -1,4 +1,6 @@
 \subsection{Thema}
-\label{sec:topic}
-
-\lipsum
+\lipsum[1]
+\subsubsection{Thema}
+\lipsum[2-4]
+\subsubsection{Thema}
+\lipsum[5-7]
