--- a/text/content.tex
+++ b/text/content.tex
@@ -93,7 +93,7 @@ Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt.
 
 \begin{equation}
 \begin{gathered}
-\zeta(s) = \sum_{n=1}^{\infty} \frac{1}{n^s} = \frac{1}{1^s} + \frac{1}{2^s} + \frac{1}{3^2} + \ldots \\[2ex]
+\zeta(s) = \sum_{n=1}^{\infty} \frac{1}{n^s} = \frac{1}{1^s} + \frac{1}{2^s} + \frac{1}{3^s} + \ldots \\[2ex]
 \text{für } \Re(s) > 1 \text{ und dessen analytischer Kontinuation}
 \end{gathered}
 \label{eq:exampleEquation}
