--- a/text/content.tex
+++ b/text/content.tex
@@ -113,7 +113,7 @@ In \autoref{code:latex} wird Quellcode aus einer Datei angezeigt.
 
 \begin{lstlisting}[
     language=C,
-    caption={Ein einfacher C code}, language=python, label=code:exampleCode, float=h
+    caption={Ein einfacher C code}, language=C++, label=code:exampleCode, float=h
 ]
 #include <stdlib.h>
 #include <stdio.h>
