added sample text

--- a/text/content.tex
+++ b/text/content.tex
@@ -164,4 +164,6 @@ In \autoref{fig:timingFig} ist ein Timing Diagramm abgebildet.
     \label{fig:timingFig}
 \end{figure}
 
+\newpage
+
 \input{text/topic/topic.tex}
