--- a/text/topic/topic.tex
+++ b/text/topic/topic.tex
@@ -1,5 +1,13 @@
-\subsection{Thema}
+\subsection{Text}
+Der folgende Text ist ein Auszug aus \textit{Wikipedia} zu der Demonstration der Leichtigkeit der Lesbarkeit des Satzes.
+
+Der Fauststoff, genannt auch Faust-Sage, die Geschichte des Doktor Johann Faust und seines Pakts mit Mephistopheles, gehört zu den am weitesten verbreiteten Stoffen in der europäischen Literatur seit dem 16. Jahrhundert. Das lückenhafte Wissen über den historischen Johann Georg Faust\footnote{wohl etwa 1480-1541} und sein spektakuläres Ende begünstigten Legendenbildungen und ließ Schriftstellern, die sich mit seinem Leben befassten, einigen Spielraum. Eigenschaften des Fauststoffs, die in den unterschiedlichsten Versionen wiederkehren, sind Fausts Erkenntnis- oder Machtstreben, sein Teufelspakt und seine erotischen Ambitionen.
+
+Während sich in der Populärkultur ältere Vorstellungen von Faust als Narr und Scharlatan hielten, geschah seit dem 18. Jahrhundert eine literarische Aufwertung des Fauststoffs. Der menschliche Zwiespalt zwischen der Kraft des Glaubens und der Sicherheit wissenschaftlicher Erkenntnis wurde zu einem Hauptthema. Faust ist der über seine Grenzen hinaus strebende Mensch und befindet sich im Konflikt zwischen egozentrischer Selbstverwirklichung und sozialer Anerkennung in einer stets noch religiös geprägten Welt.
+Es folgt nun ein Lorem Ipsum.
+
 \lipsum[1]
+
 \subsubsection{Thema}
 \lipsum[2-4]
 \subsubsection{Thema}
