--- a/tex/colophon.tex
+++ b/tex/colophon.tex
@@ -1,10 +1,11 @@
 % Robin Prillwitz 2022
 
+{
 \vspace*{\fill} % Position at the bottom
-{\parskip=0pt
+\parskip=0pt
 \section*{\normalsize Kolophon}
-\vspace*{-10pt}\noindent\setstretch{1}
-\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e}~(\fmtversion) Dokument der \hologo{KOMAScript} Klasse.}\par\noindent
-\makebox[\linewidth][s]{Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt. Kompiliert wurde es mit \hologo{XeLaTeX}}\par\noindent
-\makebox[0.7\linewidth][s]{und \hologo{biber} auf \platformname\ am \today\ von \authorFirst\ \authorLast.}
+\vspace*{-10pt}\setstretch{1}\noindent
+\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e}~(\fmtversion) Dokument der \hologo{KOMAScript} Klasse}\par\noindent
+\makebox[\linewidth][s]{unter der \textit{3-Klausel-BSD} Lizenz. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt.}\par\noindent
+\makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today\ von \authorFirst\ \authorLast.}
 }
