added wrapfigure example

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -122,6 +122,7 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{shapes}
 \usetikzlibrary{decorations.markings}
+\usetikzlibrary{arrows,snakes,automata,backgrounds,petri}
 \usepackage{tikz-timing}
 \usetikztiminglibrary[rising arrows]{clockarrows}
 \usepackage{tikzpagenodes}
