added hypen break penalty

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -51,7 +51,8 @@
 \usepackage{letltxmacro}
 \usepackage{ifplatform}
 \renewcommand{\macosxname}{{\Helvetica MacOs}}
-\usepackage[defaultlines=4, all]{nowidow}
+\usepackage[defaultlines=3, all]{nowidow}
+\brokenpenalty10000\relax
 
 % FIGURE
 \usepackage{float}
