--- a/references/references.bib
+++ b/references/references.bib
@@ -1,3 +1,12 @@
+@online{latex-template,
+  title     = {thd-template},
+  author    = {Robin Prillwitz},
+  year      = {2022-07-16},
+  url       = {https://github.com/playduck/thd-template},
+  urldate   = {2022-07-16},
+  note      = {Inoffizielle \LaTeX\ Bachelor-Vorlage für die \textit{THD}}
+}
+
 @online{exampleImage,
   title     = {Green Grass on Forest},
   author    = {Rudolf Jakkel},
