updated code formatting

--- a/src/mainmatter/content.tex
+++ b/src/mainmatter/content.tex
@@ -7,6 +7,8 @@ Für weitere Informationen zur \enquote{korrekten} Nutzung von \LaTeX\ werden fo
 \begin{itemize}
     \item \url{https://github.com/schtandard/latex_primer}
     \item \url{https://tex.stackexchange.com}
+    \item Das ist ein längerer Paragraph.
+    Dieser Zeigt an, wie das \texttt{itemize} Environemnt mit Paragraphen umgeht.
 \end{itemize}
 
 
@@ -122,8 +124,7 @@ In \autoref{code:latex} wird Quellcode aus einer Datei angezeigt.
 
 \begin{lstlisting}[
     language=C,
-    caption={Ein einfacher C code}, language=C++, label=code:exampleCode, float=h,
-    literate={{*}{\texttt{*}}1}
+    caption={Ein einfacher C code}, language=C++, label=code:exampleCode, float=h
 ]
 #include <stdlib.h>
 #include <stdio.h>
