--- a/src/backmatter/colophon.tex
+++ b/src/backmatter/colophon.tex
@@ -9,3 +9,4 @@
 \makebox[\linewidth][s]{unter der \textit{3-Klausel-BSD} Lizenz. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt.}\par\noindent
 \makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today\ von \authorFirst\ \authorLast.}
 }
+\hlc{\threeast}
