--- a/document.tex
+++ b/document.tex
@@ -1,11 +1,6 @@
 % Robin Prillwitz 2022
 
-\documentclass[
-    11pt,
-    a4paper,
-    parskip=off,
-    usegeometry,
-]{scrartcl}
+\documentclass{scrartcl}
 
 \input{./src/preamble/preamble.tex}
 
@@ -17,5 +12,4 @@
 
     \clearpage
     \input{./src/backmatter/backmatter.tex}
-
 \end{document}
