--- a/src/mainmatter/content.tex
+++ b/src/mainmatter/content.tex
@@ -35,7 +35,7 @@ In \autoref{fig:exampleFigure} wird eine Beispielgraph dargestellt.
     \begin{subfigure}{0.45\textwidth}
         \begin{tikzpicture}
             \begin{axis}[width=1.0\textwidth]
-            \addplot[color=red]{exp(x)};
+            \addplot[color=THDGreen]{exp(x)};
             \end{axis}
         \end{tikzpicture}
         \caption{Expontentialfunktion in 2D}
@@ -50,7 +50,7 @@ In \autoref{fig:exampleFigure} wird eine Beispielgraph dargestellt.
         \caption{Expontentialfunktion in 3D}
         \label{fig:3d-exp}
     \end{subfigure}
-    \caption[Beispielgraph]{Beispielgraph in \textsc{pfgplots}.}
+    \caption[Beispielgraph]{Beispielgraph in \textsc{pgfplots}.}
     \label{fig:exampleFigure}
 \end{figure}
 
