--- a/src/backmatter/colophon.tex
+++ b/src/backmatter/colophon.tex
@@ -2,11 +2,12 @@
 
 {
 \vspace*{\fill} % Position at the bottom
+\singlespacing
 \parskip=0pt
 \section*{\normalsize Kolophon}
 \vspace*{-10pt}\setstretch{1}\noindent
 \makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e}~(\fmtversion) Dokument der \hologo{KOMAScript} Klasse}\par\noindent
-\makebox[\linewidth][s]{unter der \textit{3-Klausel-BSD} Lizenz. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt.}\par\noindent
+\makebox[\linewidth][s]{unter der \textit{BSD-3} Lizenz. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt.}\par\noindent
 \makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today\ von \authorFirst\ \authorLast.}
-}
 \HighlightColor{\threeast}
+}
