--- a/src/preamble/meta.tex
+++ b/src/preamble/meta.tex
@@ -15,5 +15,5 @@
 \def \date          {\today}
 
 % Highlight color
-% Hex Foramt: 0xRRGGBB
-\definecolor{hlc}{HTML}{AA0044}
+% more color definitions in preamble.tex
+\colorlet{HighlightColor}{THDBlau}
