--- a/src/frontmatter/preface.tex
+++ b/src/frontmatter/preface.tex
@@ -12,7 +12,8 @@ Außerdem werde ich auch meine Gründe der Themenwahl ansprechen.
 Diese Sektion ist optional.
 
 \vspace*{1.5cm}
-\authorFirst\ \authorLast,\\
+\noindent
+\textit{\authorFirst\ \authorLast},\\
 \date
 \end{abstract}
 }
