--- a/src/backmatter/colophon.tex
+++ b/src/backmatter/colophon.tex
@@ -2,12 +2,14 @@
 
 {
 \vspace*{\fill} % Position at the bottom
+\centersection{Kolophon}
+% \addcontentsline{toc}{section}{Kolophon}
+\vspace*{0.5em}
 \singlespacing
 \parskip=0pt
-\section*{\normalsize Kolophon}
-\vspace*{-10pt}\setstretch{1}\noindent
-\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e}~(\fmtversion) Dokument der \hologo{KOMAScript} Klasse}\par\noindent
-\makebox[\linewidth][s]{unter der \textit{BSD-3} Lizenz. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} gesetzt.}\par\noindent
-\makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today\ von \authorFirst\ \authorLast.}
+\setstretch{1}\noindent
+\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e} Dokument der \hologo{KOMAScript} Klasse und wurde mit}\par\noindent
+\makebox[\linewidth][s]{\textit{Minion Pro} gesetzt. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} erstellt.}\par\noindent
+\makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today.}\par\noindent
 \HighlightColor{\threeast}
 }
