--- a/src/backmatter/eidesstatt.tex
+++ b/src/backmatter/eidesstatt.tex
@@ -2,7 +2,7 @@
 
 \newpage
 \begin{samepage}
-\section*{Eidesstattliche Versicherung}
+\centersection{Eidesstattliche Versicherung}
 \addcontentsline{toc}{section}{Eidesstattliche Versicherung}
 \vspace{0.5cm}
 Ich, \underline{\textbf{\;\authorFirst,\;\authorLast,\;\matrnr\;}}\\
