--- a/src/frontmatter/restriction-notice.tex
+++ b/src/frontmatter/restriction-notice.tex
@@ -1,9 +1,7 @@
 {
 \singlespacing
-\begin{center}
-    {\normalfont\sectfont\nobreak Sperrvermerk
-    \vspace{-.5em}}%
-\end{center}
+\centersection{Sperrvermerk}
+\addcontentsline{toc}{section}{Sperrvermerk}
 
 \lipsum[1-3]
 }
