--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -1,13 +1,17 @@
 % Robin Prillwitz 2022
 
-\singlespacing
+% set empty pages if required
+% \emptypage
 
 % BIBLIOGRAPHY
+\singlespacing
 \setstretch{1}
 \nocite{*}
 \section*{\bibname}
 \addcontentsline{toc}{section}{\bibname}
 \printbibliography[heading=none]
+
+\emptypage
 
 %  APPENDIX
 \clearpage
