--- a/src/frontmatter/abstract.tex
+++ b/src/frontmatter/abstract.tex
@@ -1,9 +1,8 @@
 {
 \onehalfspacing
-\begin{center}
-    {\normalfont\sectfont\nobreak Abstrakt
-    \vspace{-.5em}}%
-\end{center}
+\centersection{Abstrakt}
+\addcontentsline{toc}{section}{Abstrakt}
+
 \begin{abstract}
     \lipsum[1]% Blind text
 \end{abstract}
