--- a/src/frontmatter/preface.tex
+++ b/src/frontmatter/preface.tex
@@ -1,9 +1,7 @@
 {
 \onehalfspacing
-\begin{center}
-    {\normalfont\sectfont\nobreak Vorwort
-    \vspace{-.5em}}%
-\end{center}
+\centersection{Vorwort}
+\addcontentsline{toc}{section}{Vorwort}
 
 \begin{abstract}% We're abusing the abstract environment for the preface due to the margins
 Das ist das Vorwort der Arbeit.
@@ -11,9 +9,9 @@ Hierbei möchte ich Danksagung an verschiedene Personen und Institutionen geben,
 Außerdem werde ich auch meine Gründe der Themenwahl ansprechen.
 Diese Sektion ist optional.
 
-\vspace*{1.5cm}
+\vspace*{1.2em}
 \noindent
-\textit{\authorFirst\ \authorLast},\\
-\date
+\hfill\hspace*{-2em}\textsc{\authorFirst\ \authorLast}\\
+\date.
 \end{abstract}
 }
