moving empty pages

--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -1,15 +1,18 @@
 % Robin Prillwitz 2022
 
 \singlespacing
-\pagenumbering{roman}
-\setcounter{page}{0}
+\setcounter{page}{1}
 
+\thispagestyle{empty}
 \input{./src/frontmatter/titlepage.tex}
 \newpage
 
 \thispagestyle{empty}
-\setcounter{page}{0}
-\emptypage
+\clearpage\null
+\newpage
+
+\pagenumbering{roman}
+\setcounter{page}{1}
 
 \input{./src/frontmatter/abstract.tex}
 \newpage
