--- a/src/mainmatter/mainmatter.tex
+++ b/src/mainmatter/mainmatter.tex
@@ -1,3 +1,9 @@
+
+{
+\setcounter{page}{0}
+\emptypage % content must start on right page
+}
+
 \onehalfspacing
 \pagenumbering{arabic}
 \setcounter{page}{1}
