--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -1,7 +1,7 @@
 % Robin Prillwitz 2022
 
 % set empty pages if required
-% \emptypage
+\emptypage
 
 % BIBLIOGRAPHY
 \singlespacing
@@ -11,7 +11,7 @@
 \addcontentsline{toc}{section}{\bibname}
 \printbibliography[heading=none]
 
-\emptypage
+% \emptypage
 
 %  APPENDIX
 \clearpage
@@ -20,6 +20,9 @@
 
 % EIDENSTAT
 \input{./src/backmatter/eidesstatt.tex}
+
+\newpage
+\clearpage
 
 % KOLOPHON
 \input{./src/backmatter/colophon.tex}
