added page bleed

--- a/src/mainmatter/content.tex
+++ b/src/mainmatter/content.tex
@@ -220,8 +220,11 @@ In \autoref{fig:timingFig} ist ein Timing Diagramm abgebildet.
     edge [post,bend left]  node {2}       (w2);
 \end{tikzpicture}
 \caption{Wrapfigure eines Petrinetzes}
+\label{fig:petri}
 \end{wrapfigure}
 
-\lipsum
+\lipsum[11]
+\marginline{Hier ist ein Lorem Ipsum aufgeführt, welches \autoref{fig:petri} umschließt.}
+\lipsum[7-10]
 
 \input{./src/mainmatter/chapter1/topic.tex}
