--- a/src/mainmatter/mainmatter.tex
+++ b/src/mainmatter/mainmatter.tex
@@ -1,8 +1,12 @@
 
 {
 \setcounter{page}{0}
-\emptypage % content must start on right page
+\emptypage
+% content conventionally starts on right hand page
+% if you would like to change this see the following:
+% https://tex.stackexchange.com/a/444126/260462
 }
+
 
 \onehalfspacing
 \pagenumbering{arabic}
