--- a/src/frontmatter/titlepage.tex
+++ b/src/frontmatter/titlepage.tex
@@ -2,12 +2,12 @@
 
 % Titlepage in accordance to:
 % https://ec.th-deg.de/Studierende/Antraege-und-Organisatorisches/AI/anmeldung_ai_bachelor.pdf
-
+{
 \newgeometry{
     left=1.50cm,
     right=1.50cm,
     top=1.50cm,
-    bottom=2.00cm
+    bottom=2.00cm,
 }
 \begin{titlepage}
     % page setup
@@ -16,8 +16,8 @@
     % page outline
     \begin{tikz}[remember picture,overlay]
         \draw[black, line width=1pt]
-        (current page text area.south west) rectangle
-        (current page text area.north east);
+        (current page text area.north west) rectangle
+        (current page text area.south east);
     \end{tikz}
     % write text
     \begin{center}
@@ -52,3 +52,4 @@
     \end{center}
 \end{titlepage}
 \restoregeometry
+}
